--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         </li>
                         <li class="nav__item">
                             <a href="#about" class="nav__link">
-                                <i class="uil uil-user nav__icon"></i> A propos
+                                <i class="uil uil-user nav__icon"></i> Info
                             </a>
                         </li>
                         <!-- <li class="nav__item">
